# TstarObfuscator

./: README.md  test.sh
Test/: TestProgram-2.cpp  TestProgram.cpp
Test/IR/: TestProgram.ll  TestProgram_bcf.ll  TestProgram_csub.ll  TestProgram_fla.ll  TestProgram_lowerswitch.ll  TestProgram_rcf.ll  TestProgram_split.ll  TestProgram_sub.ll
Transforms/: CMakeLists.txt
Transforms/include/: SplitBasicBlock.h  Utils.h
Transforms/src/: BogusControlFlow.cpp  ConstantSubstitution.cpp  Flattening.cpp  HelloWorld.cpp  SplitBasicBlock.cpp  Utils.cpp
